--- a/app/assets/stylesheets/pages/_users.scss
+++ b/app/assets/stylesheets/pages/_users.scss
@@ -758,6 +758,8 @@
   }
 }
 
+
+
 .modal-content {
   color: $dark-gray;
   position: relative;
@@ -786,6 +788,11 @@
     padding-top: 16px;
     font-size: 16px;
     font-weight: lighter;
+  }
+  label {
+    margin-right: 24px;
+    margin-top: 16px;
+    margin-bottom: 8px;
   }
   input {
   align-items: center;
